feat: seo metadata

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 RESEND_API_KEY=re_5bqmximj_PjeGABPGDp4fzoXYUxWhFUt4
 EMAIL=gevorgsargsyan979@gmail.com
+NEXTAUTH_URL=https://gevorg-portfolio.vercel.app
